# imagescry

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
src/imagescry/: __init__.py  abstract_array.py  data.py  decomposition.py  embedding.py  geometry.py  image.py  pipelines.py  typechecking.py
src/imagescry/app/: __init__.py  app.py
src/imagescry/image/: __init__.py  dataset.py  info.py  io.py  transforms.py
src/imagescry/models/: __init__.py  embedding.py  pipelines.py
src/imagescry/storage/: __init__.py  base.py  database.py  models.py  operations.py  utils.py
tests/: __init__.py  test_abstract_array.py  test_data.py  test_decomposition.py  test_embedding.py  test_geometry.py  test_image.py  test_typechecking.py
tests/test_image/: __init__.py  conftest.py  test_dataset.py  test_info.py  test_io.py  test_transform.py
tests/test_models/: test_decomposition.py  test_embedding.py
tests/test_storage/: test_database.py  test_models.py  test_utils.py
